dilang-interpreter/test/cases/errors/with_non_impl.di
capability Logger { fn info(msg: Str) }

fn main() {
    with [ Logger <- 42 @ 'Process ] @ 'Process {
        Logger.info("x")
    }
}
